新增: 光照显示支持透视渲染模式