@@ -8,39 +8,27 @@ import java.util.Collections;
 import java.util.List;
 import java.util.function.Predicate;
 import net.minecraft.client.Minecraft;
-import net.minecraft.client.renderer.SubmitNodeCollector;
-import net.minecraft.client.renderer.rendertype.RenderType;
-import net.minecraft.client.renderer.rendertype.RenderTypes;
-import net.minecraft.resources.Identifier;
-import net.minecraft.world.phys.Vec3;
+import net.minecraft.util.math.Vec3d;
+import org.lwjgl.opengl.GL11;
 
-/** 在可生成怪物的地面上，将缓存的光照等级绘制为经过深度测试的交叉标记或纹理数字。 */
+/** 在可生成怪物的地面上，将缓存的光照等级绘制为交叉、数字或方框数字。 */
 public final class LightOverlayRenderer {
-    private static final Identifier NUMBER_TEXTURE =
-            Identifier.fromNamespaceAndPath("autotorch", "textures/misc/light_level_numbers_large.png");
-    private static final Identifier MEDIUM_NUMBER_TEXTURE =
-            Identifier.fromNamespaceAndPath("autotorch", "textures/misc/light_level_numbers_medium.png");
-    private static final int FULL_BRIGHT_LIGHT = 0xF0;
     private static final int ALWAYS_RISK_COLOR = 0xE0FF3030;
     private static final int NIGHT_RISK_COLOR = 0xE0FFD23C;
     private static final int SAFE_COLOR = 0xE050E060;
     private static final int DROWNED_RISK_COLOR = 0xE040D8E8;
     private static final float CROSS_LINE_WIDTH = 2.5F;
-    private static final float LINE_WIDTH_REFERENCE_DISTANCE = 8.0F;
-    private static final double LINE_WIDTH_REFERENCE_DISTANCE_SQUARED =
-            LINE_WIDTH_REFERENCE_DISTANCE * LINE_WIDTH_REFERENCE_DISTANCE;
-    private static final float MIN_LINE_WIDTH = 0.75F;
+    private static final float DIGIT_LINE_WIDTH = 4.0F;
     private static final double SURFACE_OFFSET = 0.0125D;
     private static final double CROSS_MARGIN = 0.14D;
-    // 图集中的字形已在 64x64 单元格内居中。
-    private static final double NUMBER_OFFSET_X = 0.0D;
-    private static final double NUMBER_OFFSET_Z = 0.25D;
-    private static final double BOXED_NUMBER_OFFSET_Z = 0.0D;
-    private static final double NUMBER_MARGIN = 0.1D;
-    private static final double NUMBER_SIZE = 1.0D;
-    private static final float NUMBER_TEXTURE_CELL_SIZE = 0.25F;
-    private static final List<LightOverlayState.MarkerColumn> NO_COLUMNS = List.of();
-    private static Map<Long, ColumnRenderData> columnGeometry = Map.of();
+    private static final double DIGIT_WIDTH = 0.24D;
+    private static final double DIGIT_HEIGHT = 0.58D;
+    private static final double DIGIT_GAP = 0.08D;
+    private static final int[] DIGIT_SEGMENTS = {
+            0b0111111, 0b0000110, 0b1011011, 0b1001111, 0b1100110,
+            0b1101101, 0b1111101, 0b0000111, 0b1111111, 0b1101111
+    };
+    private static final List<LightOverlayState.Marker> NO_MARKERS = Collections.emptyList();
     private static volatile RenderData renderData;
 
     private LightOverlayRenderer() {
@@ -58,33 +46,78 @@ public final class LightOverlayRenderer {
         renderData = buildRenderData(markers, displayMode);
     }
 
-    public static void submit(Vec3 camera, PoseStack poseStack, SubmitNodeCollector collector) {
-        RenderData data = renderData;
-        if (data == null) {
-            return;
-        }
-        if (data.displayMode() != LightOverlayState.DisplayMode.CROSSES) {
-            // 方框数字样式：数字平面置于方框内部，方框单独使用线段渲染以保持清晰边界。
-            Identifier numberTexture = data.displayMode() == LightOverlayState.DisplayMode.BOXED_NUMBERS
-                    ? MEDIUM_NUMBER_TEXTURE : NUMBER_TEXTURE;
-            renderGeometry(camera, poseStack, collector, RenderTypes.text(numberTexture),
-                    (pose, buffer) -> submitNumbers(pose, buffer, data, camera));
-            if (data.displayMode() == LightOverlayState.DisplayMode.BOXED_NUMBERS) {
-                renderGeometry(camera, poseStack, collector, RenderTypes.linesTranslucent(),
-                        (pose, buffer) -> submitLines(pose, buffer, data, camera));
-            }
-        } else {
-            renderGeometry(camera, poseStack, collector, RenderTypes.linesTranslucent(),
-                    (pose, buffer) -> submitLines(pose, buffer, data, camera));
-        }
+    public static void render(Vec3d camera) {
+        renderGeometry(camera, renderData, false);
     }
 
-    private static void renderGeometry(
-            Vec3 camera, PoseStack poseStack, SubmitNodeCollector collector,
-            RenderType renderType, GeometryRenderer renderer
+    private static void renderFiltered(
+            Vec3d camera,
+            Predicate<LightOverlayState.Marker> filter
     ) {
-        RenderData data = renderData;
-        if (data == null || data.renderableCount() == 0 || Minecraft.getInstance().level == null) {
+        RenderData current = renderData;
+        if (current == null) return;
+        RenderData filtered = buildRenderData(
+                current.sourceMarkers(), current.displayMode(), filter, 8);
+        renderGeometry(camera, filtered, true);
+    }
+
+    public static void renderWaterVisible(
+            Vec3d camera, Predicate<Vec3d> isVisibleTarget
+    ) {
+        renderFiltered(camera,
+                marker -> marker.riskType() == LightOverlayState.RiskType.DROWNED
+                        && isVisibleTarget.test(markerTarget(marker)));
+    }
+
+    private static Vec3d markerTarget(LightOverlayState.Marker marker) {
+        return new Vec3d(
+                marker.pos().getX() + 0.5D,
+                marker.pos().getY() + SURFACE_OFFSET,
+                marker.pos().getZ() + 0.5D
+        );
+    }
+
+    private static void setupWaterVisibleRenderState() {
+        // 世界渲染回调会继承当前状态，纯色线条需要显式关闭纹理。
+        GlStateManager.disableTexture();
+        GlStateManager.enableBlend();
+        GlStateManager.blendFuncSeparate(
+                GlStateManager.SourceFactor.SRC_ALPHA,
+                GlStateManager.DestFactor.ONE_MINUS_SRC_ALPHA,
+                GlStateManager.SourceFactor.ONE,
+                GlStateManager.DestFactor.ONE_MINUS_SRC_ALPHA
+        );
+        GlStateManager.disableDepthTest();
+        GlStateManager.depthMask(false);
+        GlStateManager.disableCull();
+
+        GlStateManager.pushMatrix();
+        GlStateManager.scalef(0.99975586F, 0.99975586F, 0.99975586F);
+        GlStateManager.lineWidth(Math.max(
+                CROSS_LINE_WIDTH,
+                (float) Minecraft.getMinecraft().displayWidth / 1920.0F * CROSS_LINE_WIDTH
+        ));
+    }
+
+    private static void clearWaterVisibleRenderState() {
+        GlStateManager.lineWidth(1.0F);
+        GlStateManager.popMatrix();
+
+        GlStateManager.enableCull();
+        GlStateManager.depthMask(true);
+        if (ClientConfig.isLightOverlayRenderThrough()) {
+            GlStateManager.disableDepthTest();
+        } else {
+            GlStateManager.enableDepthTest();
+        }
+        GlStateManager.disableBlend();
+        GlStateManager.blendFunc(GlStateManager.SourceFactor.SRC_ALPHA,
+                GlStateManager.DestFactor.ONE_MINUS_SRC_ALPHA);
+        GlStateManager.enableTexture();
+    }
+
+    private static void renderGeometry(Vec3d camera, RenderData data, boolean waterVisible) {
+        if (data == null || data.lineCount() == 0 || Minecraft.getMinecraft().world == null) {
             return;
         }
         if (waterVisible) {
@@ -106,36 +139,27 @@ public final class LightOverlayRenderer {
         }
     }
 
-        poseStack.pushPose();
-        // 顶点在提交时先转换为相机相对坐标，避免大世界坐标分别转 float 后再相减造成精度损失。
-        collector.submitCustomGeometry(poseStack, renderType, renderer::render);
-        poseStack.popPose();
+    private static void setupLineRenderState(LightOverlayState.DisplayMode displayMode) {
+        GlStateManager.disableTexture();
+        GlStateManager.enableBlend();
+        GlStateManager.blendFunc(GlStateManager.SourceFactor.SRC_ALPHA,
+                GlStateManager.DestFactor.ONE_MINUS_SRC_ALPHA);
+        GlStateManager.enableDepthTest();
+        GlStateManager.depthMask(false);
+        GlStateManager.disableCull();
+        GlStateManager.lineWidth(displayMode == LightOverlayState.DisplayMode.CROSSES
+                ? CROSS_LINE_WIDTH : DIGIT_LINE_WIDTH);
+    }
+
+    private static void clearLineRenderState() {
+        GlStateManager.lineWidth(1.0F);
+        GlStateManager.enableCull();
+        GlStateManager.depthMask(true);
+        GlStateManager.disableBlend();
+        GlStateManager.enableTexture();
     }
 
     private static RenderData buildRenderData(
-            List<LightOverlayState.MarkerColumn> columns, LightOverlayState.DisplayMode displayMode
-    ) {
-        Map<Long, ColumnRenderData> previousGeometry = columnGeometry;
-        Map<Long, ColumnRenderData> nextGeometry = new HashMap<>(columns.size());
-        List<ColumnRenderData> visibleGeometry = new ArrayList<>(columns.size());
-        int totalLines = 0;
-        int totalQuads = 0;
-        for (LightOverlayState.MarkerColumn column : columns) {
-            ColumnRenderData geometry = previousGeometry.get(column.key());
-            if (geometry == null || geometry.sourceMarkers() != column.markers()
-                    || geometry.displayMode() != displayMode) {
-                geometry = buildColumnRenderData(column.markers(), displayMode);
-            }
-            nextGeometry.put(column.key(), geometry);
-            visibleGeometry.add(geometry);
-            totalLines += geometry.lineCount();
-            totalQuads += geometry.numberQuads().size();
-        }
-        columnGeometry = nextGeometry;
-        return new RenderData(columns, displayMode, List.copyOf(visibleGeometry), totalLines, totalQuads);
-    }
-
-    private static ColumnRenderData buildColumnRenderData(
             List<LightOverlayState.Marker> markers, LightOverlayState.DisplayMode displayMode
     ) {
         return buildRenderData(markers, displayMode, marker -> true, markers.size());
@@ -150,15 +174,10 @@ public final class LightOverlayRenderer {
             if (!filter.test(marker)) {
                 continue;
             }
-            if (displayMode == LightOverlayState.DisplayMode.NUMBERS) {
-                addNumber(geometry, marker, false);
-                continue;
-            }
-            if (displayMode == LightOverlayState.DisplayMode.BOXED_NUMBERS) {
-                addNumber(geometry, marker, true);
-                // 绿色标记表示光照已高于刷怪阈值，只显示数字，不再绘制外围边框。
-                if (marker.isRisk()) {
-                    addNumberBox(geometry, marker);
+            if (displayMode != LightOverlayState.DisplayMode.CROSSES) {
+                addNumber(geometry, marker);
+                if (displayMode == LightOverlayState.DisplayMode.BOXED_NUMBERS) {
+                    addBox(geometry, marker, markerColor(marker));
                 }
                 continue;
             }
@@ -177,24 +196,33 @@ public final class LightOverlayRenderer {
         return geometry.build(markers, displayMode);
     }
 
-    private static void addNumber(GeometryBuilder geometry, LightOverlayState.Marker marker, boolean boxed) {
-        geometry.addNumber(marker.pos().getX() + NUMBER_OFFSET_X,
-                marker.pos().getY() + SURFACE_OFFSET,
-                marker.pos().getZ() + (boxed ? BOXED_NUMBER_OFFSET_Z : NUMBER_OFFSET_Z),
-                marker.blockLight(), markerColor(marker), boxed ? (float) NUMBER_SIZE : 1.0F);
+    private static void addNumber(GeometryBuilder geometry, LightOverlayState.Marker marker) {
+        int value = marker.blockLight();
+        boolean hasTensDigit = value >= 10;
+        int digitCount = hasTensDigit ? 2 : 1;
+        double totalWidth = digitCount * DIGIT_WIDTH + (digitCount - 1) * DIGIT_GAP;
+        double startX = marker.pos().getX() + (1.0D - totalWidth) / 2.0D;
+        double startZ = marker.pos().getZ() + (1.0D - DIGIT_HEIGHT) / 2.0D;
+        double y = marker.pos().getY() + SURFACE_OFFSET;
+        int color = markerColor(marker);
+
+        if (hasTensDigit) {
+            addDigit(geometry, startX, y, startZ, DIGIT_SEGMENTS[value / 10], color);
+            startX += DIGIT_WIDTH + DIGIT_GAP;
+        }
+        addDigit(geometry, startX, y, startZ, DIGIT_SEGMENTS[value % 10], color);
     }
 
-    private static void addNumberBox(GeometryBuilder geometry, LightOverlayState.Marker marker) {
-        double x0 = marker.pos().getX() + NUMBER_MARGIN;
-        double x1 = marker.pos().getX() + 1.0D - NUMBER_MARGIN;
+    private static void addBox(GeometryBuilder geometry, LightOverlayState.Marker marker, int color) {
+        double x0 = marker.pos().getX() + CROSS_MARGIN;
+        double x1 = marker.pos().getX() + 1.0D - CROSS_MARGIN;
+        double z0 = marker.pos().getZ() + CROSS_MARGIN;
+        double z1 = marker.pos().getZ() + 1.0D - CROSS_MARGIN;
         double y = marker.pos().getY() + SURFACE_OFFSET;
-        double z0 = marker.pos().getZ() + NUMBER_MARGIN;
-        double z1 = marker.pos().getZ() + 1.0D - NUMBER_MARGIN;
-        int color = markerColor(marker);
-        geometry.add(x0, y, z0, x0, y, z1, color);
-        geometry.add(x0, y, z1, x1, y, z1, color);
-        geometry.add(x1, y, z1, x1, y, z0, color);
-        geometry.add(x1, y, z0, x0, y, z0, color);
+        geometry.add(x0, y, z0, x1, y, z0, color);
+        geometry.add(x1, y, z0, x1, y, z1, color);
+        geometry.add(x1, y, z1, x0, y, z1, color);
+        geometry.add(x0, y, z1, x0, y, z0, color);
     }
 
     private static int markerColor(LightOverlayState.Marker marker) {
@@ -205,124 +233,105 @@ public final class LightOverlayRenderer {
                 : marker.nightOnly() ? NIGHT_RISK_COLOR : ALWAYS_RISK_COLOR;
     }
 
-    private static void submitLines(PoseStack.Pose pose, VertexConsumer buffer, RenderData data, Vec3 camera) {
-        for (ColumnRenderData column : data.columns()) {
-            double[] coordinates = column.coordinates();
-            int[] colors = column.colors();
-            for (int line = 0, offset = 0; line < column.lineCount(); line++, offset += 6) {
-                double x1 = coordinates[offset] - camera.x();
-                double y1 = coordinates[offset + 1] - camera.y();
-                double z1 = coordinates[offset + 2] - camera.z();
-                double x2 = coordinates[offset + 3] - camera.x();
-                double y2 = coordinates[offset + 4] - camera.y();
-                double z2 = coordinates[offset + 5] - camera.z();
-                line(pose, buffer,
-                        x1, y1, z1, x2, y2, z2,
-                        colors[line], scaledLineWidth(CROSS_LINE_WIDTH, x1, y1, z1, x2, y2, z2));
-            }
-        }
-    }
-
-    private static float scaledLineWidth(float baseWidth,
-                                         double x1, double y1, double z1,
-                                         double x2, double y2, double z2) {
-        double x = (x1 + x2) * 0.5D;
-        double y = (y1 + y2) * 0.5D;
-        double z = (z1 + z2) * 0.5D;
-        double distanceSquared = x * x + y * y + z * z;
-        if (distanceSquared <= LINE_WIDTH_REFERENCE_DISTANCE_SQUARED) {
-            return baseWidth;
-        }
-        double distance = Math.sqrt(distanceSquared);
-        return Math.max(MIN_LINE_WIDTH,
-                (float) (baseWidth * LINE_WIDTH_REFERENCE_DISTANCE / distance));
-    }
-
-    private static void submitNumbers(
-            PoseStack.Pose pose, VertexConsumer buffer, RenderData data, Vec3 camera
+    private static void addDigit(
+            GeometryBuilder geometry, double x, double y, double z, int segments, int color
     ) {
-        for (ColumnRenderData column : data.columns()) {
-            for (NumberQuad quad : column.numberQuads()) {
-                float x = (float) (quad.x() - camera.x());
-                float y = (float) (quad.y() - camera.y());
-                float z = (float) (quad.z() - camera.z());
-                float size = quad.size();
-                float u = (quad.value() & 3) * NUMBER_TEXTURE_CELL_SIZE;
-                float v = (quad.value() >> 2) * NUMBER_TEXTURE_CELL_SIZE;
-                buffer.addVertex(pose, x, y, z)
-                        .setUv(u, v).setUv2(FULL_BRIGHT_LIGHT, FULL_BRIGHT_LIGHT).setColor(quad.color());
-                buffer.addVertex(pose, x, y, z + size)
-                        .setUv(u, v + NUMBER_TEXTURE_CELL_SIZE)
-                        .setUv2(FULL_BRIGHT_LIGHT, FULL_BRIGHT_LIGHT).setColor(quad.color());
-                buffer.addVertex(pose, x + size, y, z + size)
-                        .setUv(u + NUMBER_TEXTURE_CELL_SIZE, v + NUMBER_TEXTURE_CELL_SIZE)
-                        .setUv2(FULL_BRIGHT_LIGHT, FULL_BRIGHT_LIGHT).setColor(quad.color());
-                buffer.addVertex(pose, x + size, y, z)
-                        .setUv(u + NUMBER_TEXTURE_CELL_SIZE, v)
-                        .setUv2(FULL_BRIGHT_LIGHT, FULL_BRIGHT_LIGHT).setColor(quad.color());
-            }
+        double middleZ = z + DIGIT_HEIGHT / 2.0D;
+        double maxX = x + DIGIT_WIDTH;
+        double maxZ = z + DIGIT_HEIGHT;
+        addSegment(geometry, segments, 0, x, y, z, maxX, z, color);
+        addSegment(geometry, segments, 1, maxX, y, z, maxX, middleZ, color);
+        addSegment(geometry, segments, 2, maxX, y, middleZ, maxX, maxZ, color);
+        addSegment(geometry, segments, 3, x, y, maxZ, maxX, maxZ, color);
+        addSegment(geometry, segments, 4, x, y, middleZ, x, maxZ, color);
+        addSegment(geometry, segments, 5, x, y, z, x, middleZ, color);
+        addSegment(geometry, segments, 6, x, y, middleZ, maxX, middleZ, color);
+    }
+
+    private static void addSegment(
+            GeometryBuilder geometry, int segments, int bit,
+            double x1, double y, double z1, double x2, double z2, int color
+    ) {
+        if ((segments & 1 << bit) != 0) {
+            geometry.add(x1, y, z1, x2, y, z2, color);
+        }
+    }
+
+    private static void submitLines(Pose pose, VertexConsumer buffer, RenderData data) {
+        float[] coordinates = data.coordinates();
+        int[] colors = data.colors();
+        float lineWidth = data.displayMode() == LightOverlayState.DisplayMode.CROSSES
+                ? CROSS_LINE_WIDTH : DIGIT_LINE_WIDTH;
+        for (int line = 0, offset = 0; line < data.lineCount(); line++, offset += 6) {
+            line(pose, buffer,
+                    coordinates[offset], coordinates[offset + 1], coordinates[offset + 2],
+                    coordinates[offset + 3], coordinates[offset + 4], coordinates[offset + 5],
+                    colors[line], lineWidth);
         }
     }
 
     private static void line(
-            PoseStack.Pose pose, VertexConsumer buffer,
-            double x1, double y1, double z1, double x2, double y2, double z2,
-            int color, float lineWidth
+            Pose pose, VertexConsumer buffer,
+            float x1, float y1, float z1, float x2, float y2, float z2, int color, float lineWidth
     ) {
-        float nx = (float) (x2 - x1);
-        float ny = (float) (y2 - y1);
-        float nz = (float) (z2 - z1);
-        buffer.addVertex(pose, (float) x1, (float) y1, (float) z1)
-                .setColor(color).setNormal(pose, nx, ny, nz).setLineWidth(lineWidth);
-        buffer.addVertex(pose, (float) x2, (float) y2, (float) z2)
-                .setColor(color).setNormal(pose, nx, ny, nz).setLineWidth(lineWidth);
+        applyColor(buffer.vertex(pose.pose(), x1, y1, z1), color)
+                .endVertex();
+        applyColor(buffer.vertex(pose.pose(), x2, y2, z2), color)
+                .endVertex();
     }
 
-    private record RenderData(
-            List<LightOverlayState.MarkerColumn> sourceColumns, LightOverlayState.DisplayMode displayMode,
-            List<ColumnRenderData> columns, int lineCount, int quadCount
-    ) {
-        private int renderableCount() {
-            return lineCount + quadCount;
+    private static VertexConsumer applyColor(VertexConsumer vertex, int color) {
+        return vertex.color((color >> 16) & 0xFF, (color >> 8) & 0xFF,
+                color & 0xFF, (color >>> 24) & 0xFF);
+    }
+
+    private static final class RenderData {
+        private final List<LightOverlayState.Marker> sourceMarkers;
+        private final LightOverlayState.DisplayMode displayMode;
+        private final float[] coordinates;
+        private final int[] colors;
+        private final int lineCount;
+
+        private RenderData(
+                List<LightOverlayState.Marker> sourceMarkers, LightOverlayState.DisplayMode displayMode,
+                float[] coordinates, int[] colors, int lineCount
+        ) {
+            this.sourceMarkers = sourceMarkers;
+            this.displayMode = displayMode;
+            this.coordinates = coordinates;
+            this.colors = colors;
+            this.lineCount = lineCount;
         }
-    }
 
-    private record ColumnRenderData(
-            List<LightOverlayState.Marker> sourceMarkers, LightOverlayState.DisplayMode displayMode,
-            double[] coordinates, int[] colors, int lineCount, List<NumberQuad> numberQuads
-    ) {
-    }
-
-    private record NumberQuad(double x, double y, double z, int value, int color, float size) {
+        private List<LightOverlayState.Marker> sourceMarkers() { return sourceMarkers; }
+        private LightOverlayState.DisplayMode displayMode() { return displayMode; }
+        private float[] coordinates() { return coordinates; }
+        private int[] colors() { return colors; }
+        private int lineCount() { return lineCount; }
     }
 
     private static final class GeometryBuilder {
-        private double[] coordinates;
+        private float[] coordinates;
         private int[] colors;
         private int lineCount;
-        private final List<NumberQuad> numberQuads = new ArrayList<>();
 
         private GeometryBuilder(int markerCount) {
             int initialLines = Math.max(16, markerCount * 2);
-            coordinates = new double[initialLines * 6];
+            coordinates = new float[initialLines * 6];
             colors = new int[initialLines];
         }
 
         private void add(double x1, double y1, double z1, double x2, double y2, double z2, int color) {
             ensureCapacity(lineCount + 1);
             int offset = lineCount * 6;
-            coordinates[offset] = x1;
-            coordinates[offset + 1] = y1;
-            coordinates[offset + 2] = z1;
-            coordinates[offset + 3] = x2;
-            coordinates[offset + 4] = y2;
-            coordinates[offset + 5] = z2;
+            coordinates[offset] = (float) x1;
+            coordinates[offset + 1] = (float) y1;
+            coordinates[offset + 2] = (float) z1;
+            coordinates[offset + 3] = (float) x2;
+            coordinates[offset + 4] = (float) y2;
+            coordinates[offset + 5] = (float) z2;
             colors[lineCount] = color;
             lineCount++;
-        }
-
-        private void addNumber(double x, double y, double z, int value, int color, float size) {
-            numberQuads.add(new NumberQuad(x, y, z, value, color, size));
         }
 
         private void ensureCapacity(int requiredLines) {
@@ -342,14 +351,67 @@ public final class LightOverlayRenderer {
                     displayMode,
                     Arrays.copyOf(coordinates, lineCount * 6),
                     Arrays.copyOf(colors, lineCount),
-                    lineCount,
-                    List.copyOf(numberQuads)
+                    lineCount
             );
         }
     }
 
-    @FunctionalInterface
-    private interface GeometryRenderer {
-        void render(PoseStack.Pose pose, VertexConsumer buffer);
+    private enum Pose {
+        INSTANCE;
+
+        private Object pose() {
+            return null;
+        }
+    }
+
+    private static final class VertexConsumer {
+        private final BufferBuilder builder;
+
+        private VertexConsumer(BufferBuilder builder) {
+            this.builder = builder;
+        }
+
+        private VertexConsumer vertex(Object ignored, float x, float y, float z) {
+            builder.pos(x, y, z);
+            return this;
+        }
+
+        private VertexConsumer color(int red, int green, int blue, int alpha) {
+            builder.color(red, green, blue, alpha);
+            return this;
+        }
+
+        private void endVertex() {
+            builder.endVertex();
+        }
+    }
+
+    /** 隔离固定管线调用，避免旧版跨映射时改写 Mojang 的平台辅助类名。 */
+    private static final class GlStateManager {
+        private enum SourceFactor { SRC_ALPHA, ONE }
+        private enum DestFactor { ONE_MINUS_SRC_ALPHA }
+
+        private static void disableTexture() { GL11.glDisable(GL11.GL_TEXTURE_2D); }
+        private static void enableTexture() { GL11.glEnable(GL11.GL_TEXTURE_2D); }
+        private static void enableBlend() { GL11.glEnable(GL11.GL_BLEND); }
+        private static void disableBlend() { GL11.glDisable(GL11.GL_BLEND); }
+        private static void blendFunc(SourceFactor source, DestFactor destination) {
+            GL11.glBlendFunc(GL11.GL_SRC_ALPHA, GL11.GL_ONE_MINUS_SRC_ALPHA);
+        }
+        private static void blendFuncSeparate(
+                SourceFactor sourceRgb, DestFactor destinationRgb,
+                SourceFactor sourceAlpha, DestFactor destinationAlpha
+        ) {
+            GL11.glBlendFunc(GL11.GL_SRC_ALPHA, GL11.GL_ONE_MINUS_SRC_ALPHA);
+        }
+        private static void disableDepthTest() { GL11.glDisable(GL11.GL_DEPTH_TEST); }
+        private static void enableDepthTest() { GL11.glEnable(GL11.GL_DEPTH_TEST); }
+        private static void depthMask(boolean enabled) { GL11.glDepthMask(enabled); }
+        private static void disableCull() { GL11.glDisable(GL11.GL_CULL_FACE); }
+        private static void enableCull() { GL11.glEnable(GL11.GL_CULL_FACE); }
+        private static void lineWidth(float width) { GL11.glLineWidth(width); }
+        private static void pushMatrix() { GL11.glPushMatrix(); }
+        private static void popMatrix() { GL11.glPopMatrix(); }
+        private static void scalef(float x, float y, float z) { GL11.glScalef(x, y, z); }
     }
 }
